{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 52,
  "lineage": "4407604a-3bb4-a4fa-dbab-f16a0300e471",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/zones/us-central1-a/instanceGroups/app-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-03T01:49:18.115-08:00",
            "enable_cdn": false,
            "fingerprint": "4tkAF-3KmMs=",
            "generated_id": 6037019451815999857,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/healthChecks/app-health-check-ab"
            ],
            "id": "projects/gd-gcp-gridu-devops-t1-t2/global/backendServices/app-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-backend",
            "port_name": "http",
            "project": "gd-gcp-gridu-devops-t1-t2",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/backendServices/app-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_group",
            "module.compute.google_compute_instance_template.app_template",
            "module.network.google_compute_health_check.app_health",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "lb_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-03T01:48:26.342-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gd-gcp-gridu-devops-t1-t2/global/firewalls/allow-lb-access",
            "log_config": [],
            "name": "allow-lb-access",
            "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/networks/app-vpc",
            "priority": 1000,
            "project": "gd-gcp-gridu-devops-t1-t2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/firewalls/allow-lb-access",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "app-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "136.110.141.104",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-03T01:48:04.172-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gd-gcp-gridu-devops-t1-t2/global/addresses/load-balancer-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "load-balancer-ip",
            "prefix_length": 0,
            "project": "gd-gcp-gridu-devops-t1-t2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/addresses/load-balancer-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_forwarding",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 91196138893194992,
            "id": "projects/gd-gcp-gridu-devops-t1-t2/global/forwardingRules/app-forwarding-rule",
            "ip_address": "136.110.141.104",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "gd-gcp-gridu-devops-t1-t2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/forwardingRules/app-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/targetHttpProxies/app-http-proxy"
          },
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_group",
            "module.compute.google_compute_instance_template.app_template",
            "module.network.google_compute_backend_service.app_backend",
            "module.network.google_compute_global_address.lb_ip",
            "module.network.google_compute_health_check.app_health",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet",
            "module.network.google_compute_target_http_proxy.app_proxy",
            "module.network.google_compute_url_map.app_url_map"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gd-gcp-gridu-devops-t1-t2/global/networks/app-vpc",
            "mtu": 0,
            "name": "app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7709870550312401339",
            "numeric_id": "7709870550312401339",
            "project": "gd-gcp-gridu-devops-t1-t2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/networks/app-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T01:48:26.785-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/gd-gcp-gridu-devops-t1-t2/regions/us-central1/subnetworks/app-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/networks/app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gd-gcp-gridu-devops-t1-t2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/regions/us-central1/subnetworks/app-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1944815929772587397
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "app_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T01:51:15.737-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/gd-gcp-gridu-devops-t1-t2/global/targetHttpProxies/app-http-proxy",
            "name": "app-http-proxy",
            "project": "gd-gcp-gridu-devops-t1-t2",
            "proxy_bind": false,
            "proxy_id": 7346696078632007420,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/targetHttpProxies/app-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/urlMaps/app-url-map"
          },
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_group",
            "module.compute.google_compute_instance_template.app_template",
            "module.network.google_compute_backend_service.app_backend",
            "module.network.google_compute_health_check.app_health",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet",
            "module.network.google_compute_url_map.app_url_map"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T01:51:03.731-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/backendServices/app-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "4xAI30M-Kfs=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gd-gcp-gridu-devops-t1-t2/global/urlMaps/app-url-map",
            "map_id": 3548195592953771752,
            "name": "app-url-map",
            "path_matcher": [],
            "project": "gd-gcp-gridu-devops-t1-t2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-gridu-devops-t1-t2/global/urlMaps/app-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_group",
            "module.compute.google_compute_instance_template.app_template",
            "module.network.google_compute_backend_service.app_backend",
            "module.network.google_compute_health_check.app_health",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}